# TM-beat-studio-post

./: .flake8  .gitignore  LICENSE  README.md  env.example  pyproject.toml  requirements-lint.txt  requirements-test.txt  requirements.txt  run_lint.sh  run_lint_uv.sh  run_lo_fi.sh  run_tests_uv.sh  uv_commands.md
memo/: post_detail.txt
src/auto_post/: __init__.py  auto_lofi_post.py  combine_audio.py  config.py  create_metadata.py  create_video.py  get_refresh_token.py  piapi_music_generation.py  test_thumbnail_selection.py  thumbnail_generation.py  upload_to_youtube.py
src/test/: test_img-gen.py
tests/: README.md  conftest.py  run_tests.py  test_auto_lofi_post.py  test_auto_lofi_post_comprehensive.py  test_auto_lofi_post_error_cases.py  test_auto_lofi_post_extended.py  test_auto_lofi_post_final.py  test_combine_audio.py  test_combine_audio_extended.py  test_combine_audio_final.py  test_config.py  test_create_metadata.py  test_create_metadata_simple.py  test_create_video.py  test_get_refresh_token.py  test_piapi_music_generation.py  test_piapi_music_generation_additional.py  test_piapi_music_generation_extended.py  test_thumbnail_generation.py  test_thumbnail_selection_coverage.py  test_upload_to_youtube.py  test_upload_to_youtube_additional.py  test_upload_to_youtube_simple.py
